fix: wide content in left or right strip does not horizontally overflow
This is due to a `min-width: 0` rule on Commentary. We put this rule in place to allow the flex box to respond to narrower windows, and re-wrap appropritately.

However, for regions that we know will be relatively narrow, we should use the define scroll overflow behavior. Text wrapping in a narrow region does not seem to be very readable.

--- a/plugins/plugin-client-common/web/scss/components/Terminal/Layout/LeftStrip.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Layout/LeftStrip.scss
@@ -18,6 +18,18 @@
 @import '../../Page/mixins';
 @import '../../TopLevelTab/mixins';
 
+@include Scrollback {
+  @include LeftStrip {
+    /**
+         * Normally, this will have a min-width: 0, which allows the
+         * flex box to adjust to reduced width. However, the
+         * RightStrip is narrow, and so we probably would rather have
+         * horizontal overflow than wrapping.
+         */
+    @include WrapNormally;
+  }
+}
+
 @include KuiTabContainer {
   @include SidebarOpen {
     @include TopLevelTab {
